--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="middle-container">
 
     <div class="profile">
-      <img class="jdgr8pic" src="images/Jamesdgr8.png" alt="jamesdgr8 pic">
+      <img class="jdgr8pic" src="/images/Jamesdgr8.png" alt="jamesdgr8 pic">
       <h2>Hello.</h2>
       <p>I'm the son of rage and love
 The Jesus of Suburbia
