--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="middle-container">
 
     <div class="profile">
-      <img class="jdgr8pic" src="cv/Images/Jamesdgr8.png" alt="jamesdgr8 pic">
+      <img class="jdgr8pic" src="https://github.com/JamesDgr8/cv/blob/main/Images/JamesDgr8.png?raw=true" alt="jamesdgr8 pic">
       <h2>Hello.</h2>
       <p>I'm the son of rage and love
 The Jesus of Suburbia
@@ -41,7 +41,7 @@ The bible of none of the above</p>
     <div class="skills">
       <h2>My Skills.</h2>
       <div class="skill-row">
-        <img class="skills1" src="cv/Images/knife.png" alt="Skills" height="200px" width="200px">
+        <img class="skills1" src="https://github.com/JamesDgr8/cv/blob/main/Images/knife.png?raw=true" alt="Skills" height="200px" width="200px">
         <h2>Killing</h2>
         <p>I'll set you on fire,
           With Gas and a lighter,
