--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
   <div class="middle-container">
 
     <div class="profile">
-      <img class="jdgr8pic" src="https://ibb.co/DGr7TPr" alt="jamesdgr8 pic">
+      <img class="jdgr8pic" src="https://i.ibb.co/8zYjtnY/James-Dgr8.png" alt="jamesdgr8 pic">
       <h2>Hello.</h2>
       <p>I'm the son of rage and love
 The Jesus of Suburbia
@@ -51,7 +51,7 @@ The bible of none of the above</p>
         </p>
       </div>
       <div class="skill-row">
-        <img class="skills2" src="https://cdn-icons-png.flaticon.com/512/743/743225.png" alt="Skills" height="200px" width="200px">
+        <img class="skills2" src="https://i.ibb.co/ZdFPd3C/knife.png" alt="knife" alt="Skills" height="200px" width="200px">
         <h2>Dying</h2>
         <p>Ironic, ain't it?</p>
       </div>
